adding sun-java6-jre to prereqs and also fixing a typo in template

--- a/templates/openfire.xml.erb
+++ b/templates/openfire.xml.erb
@@ -33,7 +33,7 @@
        on multi-homed servers. -->
 
     <network>
-        <interface><% ipaddress %></interface>
+        <interface><%= ipaddress %></interface>
     </network>
 
 </jive>
